Focus application demo